# SparkLocalTesting

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
tests/: conftest.py  test_basic_db.py
tests/utilities/data/: spark_tester.py  table_factories.py
