[tool.poetry]
name = "local-testing"
version = "0.1.0"
description = ""
authors = ["galkahana <gal.kahana@hotmail.com>"]
readme = "README.md"

packages = [
    { include = "*", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
